<resources>
    <string name="app_name">Doctari</string>

    <string name="enter_phone_number">enter phone number</string>
    <string name="please_set_your_name_and_an_optional_profile_image">Please set your name and an optional profile image.</string>
    <string name="profile_info">Profile Info</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="chatsapp_will_send_an_sms_message_to_verify_your_phone_number">Doctari will send an SMS message to verify your phone number.</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="cont.">Continue</string>
    <string name="verify_923001234567">Verify PhoneNumber</string>
    <string name="enter_the_otp_code_to_verify_your_phone_number">Enter the OTP code to verify your phone number.</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="otp">OTP</string>


    <string name="video_call">Video Call</string>
    <string name="audio_call">Audio Call</string>
    <string name="profile">Profile</string>
    <string name="block">Block</string>
    <string name="settings">Settings</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Profile</string>
    <string name="search">Search</string>
    <string name="groups">Groups</string>
    <string name="invite">Invite</string>
    <string name="dev_gachago">Developer Yosef</string>
    <string name="online">Online</string>
    <string name="type_a_message">Type a message...</string>
    <string name="enter_name">enter name</string>

    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_your_contact_number">Enter your contact number</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="medical_history">Medical History</string>
    <string name="enter_your_medical_history">Enter your medical history</string>
    <string name="submit">Submit</string>
    <string name="patient_registration_form">Patient Registration Form</string>
    <string name="tab_text">tab_text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doctor">Doctor</string>
    <string name="hospital">Hospitals</string>
    <string name="consultant">Consultants</string>
    <string name="chemist">Pharmacies</string>
    <string name="treatments">Treatments Blog</string>
    <string name="pharmacies">Pharmacy</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">Update</string>
    <string name="default_notification_channel_name" translatable="true">Doctari</string>
    <string name="book_your_appointment">Book Your Appointment</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="purpose_of_appointment">Purpose of appointment</string>
    <string name="book_appointment">Book Appointment</string>

    <string-array name="appointment_status_array">
        <item>WAITING</item>
        <item>ACCEPTED</item>
        <item>REJECTED</item>
        <item>MISSED</item>
        <item>RESCHEDULED</item>
        <item>COMPLETED</item>
    </string-array>


    <string name="line">__________________________</string>
</resources>